2005-06-12  Ziga Mahkovec  <ziga.mahkovec@klika.si>

	* java/text/MessageFormat.java (parse): When parsing strings, check
	for an empty pattern trailer.

2005-06-12  Ziga Mahkovec  <ziga.mahkovec@klika.si>

	PR libgcj/20435:
	* gnu/regexp/RESyntax.java (RE_POSSESSIVE_OPS): New field.
	(static): Add possessive matching to JAVA_1_4 syntax.
	* gnu/regexp/RETokenRepeated.java (possessive): New field.
	(makePossessive, isPossessive): New methods.
	(match): Don't back off during possessive matching.
	* gnu/regexp/RE.java (initalize): Accept possessive quantifier.
	* java/util/regex/Pattern.java (constructor): Switch syntax from PERL5
	to JAVA_1_4.

2005-06-11  Audrius Meskauskas <AudriusA@Bioinformatics.org>

	* org/omg/CORBA/ORB.java,
	org/omg/CORBA/CustomValue.java,
	org/omg/CORBA/VM_ABSTRACT.java,
	org/omg/CORBA/VM_CUSTOM.java,
	org/omg/CORBA/VM_NONE.java,
	org/omg/CORBA/VM_TRUNCATABLE.java,
	org/omg/CORBA/VM_TRUNCATABLE.java,
	org/omg/CORBA/portable/ValueBase.java,
	org/omg/CORBA_2_3/portable/package.html: Documentation update.
	org/omg/CORBA_2_3/package.html: New file.

2005-06-11  Audrius Meskauskas <AudriusA@Bioinformatics.org>
	
	* org/omg/CORBA/portable/StreamableValue.java,
	org/omg/CORBA/portable/CustomValue.java,
	gnu/CORBA/CDR/Vio.java: New files.
	* org/omg/CORBA/ValueBaseHelper.java: Using	gnu.CORBA.Vio.
	* org/omg/CORBA_2_3/portable/OutputStream.java: Documentatin update. 
	(write_value): Using gnu.CORBA.Vio.
	* org/omg/CORBA_2_3/portable/InputStream.java Documentation update. 
	(read_value): Using gnu.CORBA.Vio.
	* gnu/CORBA/ObjectCreator.java (Idl2class, Idl2Object): New methods.
	(toIDL): Do not insert OMG prefix.
	* gnu/CORBA/Restricted_ORB.java (create_any): Set ORB for that Any.
	(register_value_factory, unregister_value_factory, lookup_value_factory): 
	New CORBA 2_3 methods.
	* gnu/CORBA/gnuAny.java (extract_Value): Use reflection if holder does
	not implement ValueBaseHolder.
	* gnu/CORBA/CDR/cdrInput.java: Implementing 2_3 stream and 