@@ -1,3 +1,10 @@
+2005-06-13  Roman Kennke  <roman@kennke.org>
+
+	* javax/swing/text/DateFormatter.java:
+	Implemented new class.
+	* javax/swing/JFormattedTextField.java
+	(setValue): Added conversion from value to text.
+
 2005-06-12  Ziga Mahkovec  <ziga.mahkovec@klika.si>
 
 	* java/text/MessageFormat.java (parse): When parsing strings, check
@@ -58,7 +65,7 @@
 
 2005-06-10  Roman Kennke  <roman@kennke.org>
 
-	* javax/swing/text/InternationalFormatter.java
+	* javax/swing/text/InternationalFormatter.java:
 	Implemented new class.
 
 2005-06-10  Roman Kennke  <roman@kennke.org>
